# ProofOfConcepts

./: README.md
HelmHelloWorld/: override.yaml  summary.md
HelmHelloWorld/helloworld-chart/: values.yaml
HelmHelloWorld/helloworld-chart/templates/: deployment.yaml
IngressController/: summary.md
IngressController/VoyagerSetup/External-DNSViaHelm/: setup.sh
IngressController/VoyagerSetup/VoyagerViaHelm/: setup.sh
IngressController/VoyagerUse/: 01servicea.yml  02serviceb.yml  04cert.yml  05ingress.yml  06ingressb.yaml
Telegraf/: telegraf-config.yaml  telegraf-deployment.yaml  telegraf-secrets.yaml  telegraf-service.yaml
chess-player-agent/: pyproject.toml
chess-player-agent/chess_player_agent/: README.md  chess_game.py  chess_players.py  chess_results.sql  chess_results.sqlite  chess_tourney.py  play_single_game.py  player_agent.ipynb  sqlite_stuff.py
cncjs/: pyproject.toml
cncjs/cncjs/: config_models.py  generate_mdi.py
cncjs/cncjs/gcode_templates/: inital_tool_bitsetter.gcode  move_to_location.gcode.template  swap_tool_bitsetter.gcode
