[tool.poetry]
name = "chess-player-agent"
version = "0.1.0"
description = ""
authors = ["Alan Alexander <duallain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chess = "^1.10.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
