[tool.poetry]
name = "cncjs"
version = "0.1.0"
description = ""
authors = ["Alan Alexander <duallain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
